<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/username"/>
	<EditText android:layout_height="wrap_content" android:id="@+id/username" android:layout_width="match_parent" android:inputType="textNoSuggestions"></EditText>
	<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/password"/>
	<EditText android:layout_height="wrap_content" android:id="@+id/password" android:layout_width="match_parent" android:inputType="textPassword"></EditText>

	<Button
	    android:id="@+id/login"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/login_button_label" >
</Button>
  
</LinearLayout>
