<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1"
	android:paddingLeft="3dip" android:paddingRight="3dip"
	android:focusable="true" android:focusableInTouchMode="true">

	<TextView
	    android:id="@+id/noteTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/clip_title" />

	<WebView android:layout_width="match_parent"
		android:layout_height="0dip" android:layout_weight=".80" android:id="@+id/webView1"></WebView>
	<RelativeLayout android:layout_marginTop="10dip"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:id="@+id/RelativeLayout1">
		<TextView android:text="@string/label_tags"
			android:layout_alignBaseline="@+id/noteTags" android:layout_width="wrap_content"
			android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:id="@+id/textView1" android:layout_height="wrap_content"></TextView>
		<EditText android:layout_alignBaseline="@+id/noteTags"
			android:text="@string/hello" android:layout_toRightOf="@+id/textView1"
			android:layout_width="match_parent" android:layout_alignParentTop="true"
			android:id="@+id/noteTags" android:layout_alignParentRight="true"
			android:layout_height="wrap_content">
			<requestFocus></requestFocus>
		</EditText>
	</RelativeLayout>
</LinearLayout>
