<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <!-- The navigation drawer -->
    <LinearLayout android:id="@+id/left_drawer"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingLeft="8dp"
        android:background="#111" > 
        
        <TextView android:id="@+id/drawer_display_user_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	style="@style/MLText"
            android:text="@string/username" />
        
        <View style="@style/MLDivider" />
 
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
           
	       <TextView
	           android:id="@+id/nav_drawer_notebooks"
	           style="@style/MLText"
	           android:layout_width="200dp"
	           android:layout_height="wrap_content"
	           android:clickable="true"
	           android:text="@string/label_notebooks" />
       
       	   <TextView
	           android:id="@+id/nav_drawer_notebooks_count"
	           style="@style/MLText"
	           android:layout_width="48dp"
	           android:layout_height="wrap_content"
	           android:layout_alignParentRight="true" />
       
       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
       
	       <TextView
	           android:id="@+id/nav_drawer_notes"
	           style="@style/MLText"
	           android:layout_width="200dp"
	           android:layout_height="wrap_content"
	           android:clickable="true"
	           android:layout_alignParentLeft="true"
	           android:text="@string/label_notes" />
	       
	       <TextView
	           android:id="@+id/nav_drawer_notes_count"
	           style="@style/MLText"
	           android:layout_width="48dp"
	           android:layout_height="wrap_content"
	           android:layout_alignParentRight="true" />
       
       </RelativeLayout>
       
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
	       
       	   <TextView
	           android:id="@+id/nav_drawer_tags"
	           style="@style/MLText"
	           android:layout_width="200dp"
	           android:layout_height="wrap_content"
	           android:clickable="true"
	           android:text="@string/label_tags" />
       
       	   <TextView
	           android:id="@+id/nav_drawer_tags_count"
	           style="@style/MLText"
	           android:layout_width="48dp"
	           android:layout_height="wrap_content"
	           android:layout_alignParentRight="true" />
       
       </RelativeLayout>
        
     </LinearLayout>
</android.support.v4.widget.DrawerLayout>